# hawkeye

./: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/silentStartConf/: tauri.conf.json
src-tauri/src/: main.rs
src/components/: apache.jsx  frame.jsx  header.jsx  mit.jsx  sidebar.jsx
src/lib/: formats.js
src/pages/: _app.jsx  index.jsx
src/pages/about/: index.jsx
src/pages/convert/: index.jsx
src/pages/history/: index.jsx
src/pages/settings/: index.js  index.jsx
