[package]
name = "hawkeye"
version = "0.0.1"
description = "watch new image file and convert it automatically"
authors = ["Phonedolly"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Phonedolly/hawkeye"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-message", "dialog-open", "protocol-asset", "shell-open", "system-tray", "window-all"] }
notify = "5.1.0"
platform-dirs = "0.3.0"
magick_rust = "0.17.0"
winrt-notification = "0.5.1"

[dependencies.windows]
version = "0.44.0"
features = [
    "ApplicationModel"
]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
